improved menu service